--- a/test/tests-container-salmiac/requirements_frozen.txt
+++ b/test/tests-container-salmiac/requirements_frozen.txt
@@ -1,6 +1,7 @@
 arpy==2.3.0
 atomicwrites==1.1.5
-attrs==19.3.0
+attrs==22.1.0
+awscli
 beautifulsoup4==4.8.2
 blinker==1.6.2
 boto3==1.26.158
@@ -9,7 +10,7 @@ Brotli==1.0.9
 cachetools==5.3.1
 certifi==2023.5.7
 cffi==1.15.1
-chardet==3.0.4
+chardet
 charset-normalizer==3.1.0
 click==8.1.3
 ConfigArgParse==1.5.3
@@ -20,37 +21,37 @@ docker==4.0.2
 et-xmlfile==1.0.1
 Flask==2.3.2
 Flask-BasicAuth==0.2.0
-gevent==22.10.2
+gevent==24.11.1
 geventhttpclient==2.0.9
 google-auth==2.20.0
-greenlet==2.0.2
+greenlet==3.1.1
 html5lib==1.0.1
 idna==3.4
 importlib-metadata==6.7.0
 itsdangerous==2.1.2
-jdcal==1.0
+jdcal==1.0.1
 Jinja2==3.1.2
 jmespath==1.0.1
 junit-xml==1.9
-kiwisolver==1.0.1
+kiwisolver
 kubernetes==26.1.0
 ldap3==2.9.1
 locust==1.4.1
-lxml==4.5.0
+lxml
 MarkupSafe==2.1.3
-matplotlib==3.1.2
+matplotlib==3.5
 more-itertools==4.2.0
 msgpack==1.0.5
 mysqlclient==2.2.0
-numexpr==2.7.1
-numpy==1.17.4
+numexpr
+numpy
 oauthlib==3.2.2
 olefile==0.46
 openpyxl==3.0.3
-packaging==20.3
-pandas==0.25.3
+packaging
+pandas==2.2.3
 pexpect==4.8.0
-Pillow==7.0.0
+Pillow
 pluggy==0.13.0
 psutil==5.9.5
 ptyprocess==0.7.0
@@ -59,21 +60,21 @@ pyasn1==0.5.0
 pyasn1-modules==0.3.0
 pycparser==2.21
 pyOpenSSL==23.2.0
-pyparsing==2.4.6
+pyparsing
 pytest==4.6.9
-python-dateutil==2.7.3
-pytz==2019.3
-PyYAML==6.0
-pyzmq==25.1.0
+python-dateutil==2.8.2
+pytz==2020.1
+PyYAML==6.0.2
+pyzmq
 requests==2.28.2
 requests-oauthlib==1.3.1
 rsa==4.9
 s3transfer==0.6.1
-scipy==1.3.3
+scipy==1.11.4
 sdkms==4.18.2231
 six==1.14.0
-soupsieve==1.9.5
-tables==3.6.1
+soupsieve
+tables==3.9.2
 urllib3==1.26.15
 wcwidth==0.1.8
 webencodings==0.5.1
