--- a/test/tests-container-salmiac/requirements_frozen.txt
+++ b/test/tests-container-salmiac/requirements_frozen.txt
@@ -1,23 +1,23 @@
 arpy==2.3.0
 atomicwrites==1.1.5
 attrs==22.1.0
-awscli
+awscli==1.38.24
 beautifulsoup4==4.8.2
 blinker==1.6.2
-boto3==1.26.158
-botocore==1.29.158
+boto3==1.37.24
+botocore
 Brotli==1.0.9
 cachetools==5.3.1
-certifi==2023.5.7
+certifi==2025.1.31
 cffi==1.15.1
 chardet
-charset-normalizer==3.1.0
+charset-normalizer==3.4.1
 click==8.1.3
 ConfigArgParse==1.5.3
 cryptography==41.0.1
 cycler==0.10.0
 decorator==4.4.2
-docker==4.0.2
+docker
 et-xmlfile==1.0.1
 Flask==2.3.2
 Flask-BasicAuth==0.2.0
@@ -26,7 +26,7 @@ geventhttpclient==2.0.9
 google-auth==2.20.0
 greenlet==3.1.1
 html5lib==1.0.1
-idna==3.4
+idna==3.10
 importlib-metadata==6.7.0
 itsdangerous==2.1.2
 jdcal==1.0.1
@@ -51,7 +51,7 @@ openpyxl==3.0.3
 packaging
 pandas==2.2.3
 pexpect==4.8.0
-Pillow
+pillow
 pluggy==0.13.0
 psutil==5.9.5
 ptyprocess==0.7.0
@@ -62,18 +62,18 @@ pycparser==2.21
 pyOpenSSL==23.2.0
 pyparsing
 pytest==4.6.9
-python-dateutil==2.8.2
+python-dateutil==2.9.0
 pytz==2020.1
 PyYAML==6.0.2
 pyzmq
-requests==2.28.2
+requests
 requests-oauthlib==1.3.1
-rsa==4.9
-s3transfer==0.6.1
+rsa==4.7.2
+s3transfer==0.11.4
 scipy==1.11.4
 sdkms==4.18.2231
-six==1.14.0
-soupsieve
+six==1.17.0
+soupsieve==2.6
 tables==3.9.2
 urllib3==1.26.15
 wcwidth==0.1.8
