--- a/.github/workflows/build-solution.yml
+++ b/.github/workflows/build-solution.yml
@@ -3,17 +3,9 @@ name: Build Solution
 on:
   workflow_call:
     secrets:
-      AWS_ACCESS_KEY_ID:
-        required: true
-      AWS_SECRET_ACCESS_KEY:
-        required: true
-      EC2_PRIVATE_SSH_KEY:
-        required: true
       FORTANIX_API_KEY:
         required: true
       OVERLAYFS_UNIT_TEST_API_KEY:
-        required: true
-      PAT:
         required: true
   push:
     branches: [ "master" ]
@@ -34,39 +26,16 @@ jobs:
         with:
           repository: fortanix/salmiac
 
-      - name: Pull submodules
-        uses: actions/checkout@v3
-        with:
-          repository: fortanix/app-test-infra-test
-          token: ${{ secrets.PAT }}
-          path: tools/app-test-infra
-
-      - name: Configure AWS credentials
-        run: |
-          aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws configure set region us-west-1
-
-      - name: Login into ECR
-        uses: aws-actions/amazon-ecr-login@v2.0.1
-
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@master
         with:
-          targets: x86_64-unknown-linux-musl
-          toolchain: nightly
-
-      - name: Setup SSH
-        run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.EC2_PRIVATE_SSH_KEY }}" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan github.com >> ~/.ssh/known_hosts
+          targets: x86_64-unknown-linux-musl, x86_64-unknown-linux-gnu
+          toolchain: nightly-2024-11-21
 
       - name: Install build dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y libpcap-dev amazon-ecr-credential-helper
+          sudo apt-get install -y libpcap-dev
 
       - name: Build Rust code
         run: |
@@ -78,15 +47,3 @@ jobs:
           OVERLAYFS_UNIT_TEST_API_KEY: ${{ secrets.OVERLAYFS_UNIT_TEST_API_KEY }}
         run: |
           ./unit-test-solution.sh
-
-#       Will be uncommented in RTE-188
-#      - name: Build application tests container
-#        run: |
-#          ./build-app-tests-container.sh
-
-#      - name: Run application tests container
-#        env:
-#          FORTANIX_API_KEY: ${{ secrets.FORTANIX_API_KEY }}
-#          OVERLAYFS_UNIT_TEST_API_KEY: ${{ secrets.OVERLAYFS_UNIT_TEST_API_KEY }}
-#        run: |
-#         ./run-application-tests.sh ${{ env.TESTS_CONTAINER_ECR }} ${{ env.FORTANIX_API_KEY }}
