--- a/tools/container-converter/Cargo.toml
+++ b/tools/container-converter/Cargo.toml
@@ -20,7 +20,7 @@ http = "0.2.8"
 lazy_static = "1.4.0"
 log = "0.4"
 nix = { version = "0.26.1", features = ["user", "fs"] }
-openssl = { version = "0.10", features = ["vendored"] }
+openssl = "0.10"
 rand = "0.8.4"
 serde = { version = "1.0.127", features = ["derive"] }
 serde_json =  { git = "https://github.com/fortanix/serde-json.git", branch = "base64_bytes" }
