--- a/vsock-proxy/enclave/Cargo.toml
+++ b/vsock-proxy/enclave/Cargo.toml
@@ -24,7 +24,7 @@ ipnetwork = { version = "0.18.0", features = ["serde"] }
 log = "0.4"
 mbedtls = { version = "0.12.1" }
 nix = "0.15.0"
-openssl = { version = "0.10", features = ["vendored"] }
+openssl = "0.10"
 pkix = "0.1.2"
 rand = "0.8.5"
 rtnetlink = "0.8.0"
