[RTE-433] Auto cert renewal (#44)
* Start message handler in parent

* Abstract synchronous message exchanges

* Prepare enclave background tasks using parent vsock

* Prepare auto cert renewal background task

* Code cleanup

* Refactor get_certificate_expiry

* Automatic cert renewal (enclave side)

* Refactor communicate_certificates

* Handle CSRs from background task

* Change cert renewal interval for debug/release enclaves

* More verbose output from auto cert renewal

* Address reviewer comments

* Disable python-default-appcert to avoid nitro agent dependency

--- a/vsock-proxy/enclave/Cargo.toml
+++ b/vsock-proxy/enclave/Cargo.toml
@@ -12,6 +12,7 @@ api-model = { path = "../../api-model", features = ["serde"] }
 async-process = "1.2.0"
 async-trait = "0.1.51"
 base64 = "0.13.0"
+chrono = "0.4"
 clap = "2.33"
 const_format = "0.2.32"
 em-app = { workspace = true }
@@ -22,7 +23,7 @@ hyper = "0.10"
 interfaces = "0.0.8"
 ipnetwork = { version = "0.18.0", features = ["serde"] }
 log = "0.4"
-mbedtls = { version = "0.12.1" }
+mbedtls = { version = "0.12.1", features = ["chrono"] }
 nix = "0.15.0"
 openssl = "0.10"
 pkix = "0.1.2"
@@ -34,7 +35,7 @@ serde_cbor = "0.11.2"
 serde_json =  { git = "https://github.com/fortanix/serde-json.git", branch = "base64_bytes" }
 shared = { path = "../shared" }
 sysinfo = "0.29.8"
-tokio = { version = "1.0.1", features = ["macros", "rt", "rt-multi-thread", "io-util"] }
+tokio = { version = "1.0.1", features = ["macros", "rt", "rt-multi-thread", "time", "io-util"] }
 tokio-vsock = "0.3.1"
 tun = { version = "0.5.3", features = ["async"] }
 url = "2.3.1"
