--- a/vsock-proxy/enclave/Cargo.toml
+++ b/vsock-proxy/enclave/Cargo.toml
@@ -35,7 +35,7 @@ serde_cbor = "0.11.2"
 serde_json =  { git = "https://github.com/fortanix/serde-json.git", branch = "base64_bytes" }
 shared = { path = "../shared" }
 sysinfo = "0.29.8"
-tokio = { version = "1.0.1", features = ["macros", "rt", "rt-multi-thread", "time", "io-util"] }
+tokio = { version = "1.0.1", features = ["macros", "rt", "fs", "rt-multi-thread", "time", "io-util"] }
 tokio-vsock = "0.3.1"
 tun = { version = "0.5.3", features = ["async"] }
 url = "2.3.1"
