--- a/vsock-proxy/enclave/Cargo.toml
+++ b/vsock-proxy/enclave/Cargo.toml
@@ -17,6 +17,7 @@ clap = "2.33"
 const_format = "0.2.32"
 em-app = { workspace = true }
 em-client = { workspace = true }
+enclaveos-encrypted-fs = { path = "../../../../product-packages/common/enclaveos-encrypted-fs" }
 env_logger = "0.7"
 futures = "0.3"
 hmac = "0.12.1"
