--- a/vsock-proxy/enclave/Cargo.toml
+++ b/vsock-proxy/enclave/Cargo.toml
@@ -17,6 +17,7 @@ clap = "2.33"
 const_format = "0.2.32"
 em-app = { workspace = true }
 em-client = { workspace = true }
+enclaveos-encrypted-fs = { path = "../../tools/enclaveos-encrypted-fs" }
 env_logger = "0.7"
 futures = "0.3"
 hmac = "0.12.1"
@@ -24,7 +25,7 @@ hyper = "0.10"
 interfaces = "0.0.8"
 ipnetwork = { version = "0.18.0", features = ["serde"] }
 log = "0.4"
-mbedtls = { version = "0.12.1", features = ["chrono"] }
+mbedtls = { version = "0.13.4", features = ["chrono"] }
 nix = "0.15.0"
 openssl = "0.10"
 pkix = "0.1.2"
@@ -44,7 +45,7 @@ url = "2.3.1"
 uuid = "0.7.4"
 
 [build-dependencies]
-mbedtls = { version = "0.12.1", features = ["rdrand", "std", "ssl"], default-features = false }
+mbedtls = { version = "0.13.4", features = ["rdrand", "std", "ssl"], default-features = false }
 pkix = "0.1.2"
 serde_cbor = "0.11.2"
 
